--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">VAMZ Aplikacia</string>
+    <string name="app_name">LibraLog</string>
+    <string name="hlavny_zoznam">Zoznam kníh</string>
+    <string name="formular_knihy">NOVÁ KNIHA</string>
+    <string name="back_button">Go back</string>
 </resources>
