--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="denna_notifikacia_kanal">denna_notifikacia_kanal</string>
     <string name="notifikacia_po_zavreti">notifikácia po zavretí</string>
     <string name="kanal_pre_notifikaciu_apky">kanál pre notifikikáciu aplikácie</string>
+    <string name="oblubene">Obľúbené</string>
 </resources>
