--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="notifikacia_po_zavreti">notifikácia po zavretí</string>
     <string name="kanal_pre_notifikaciu_apky">kanál pre notifikikáciu aplikácie</string>
     <string name="oblubene">Obľúbené</string>
+    <string name="oblubena_kniha">Obľúbená kniha</string>
 </resources>
