pridanie externej knižnice Retrofit + implementovanie OpenLibraryAPI na vyhľadávanie informácii o autoroch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="kanal_pre_notifikaciu_apky">kanál pre notifikikáciu aplikácie</string>
     <string name="oblubene">Obľúbené</string>
     <string name="oblubena_kniha">Obľúbená kniha</string>
+    <string name="pocet_diel_v_kniznici">Počet diel v knižnici:</string>
+    <string name="pocet_precitanych_knih">Počet prečítaných kníh:</string>
 </resources>
